workflow of order-service.yaml

--- a/.github/workflows/order-service.yml
+++ b/.github/workflows/order-service.yml
@@ -40,7 +40,7 @@ jobs:
       with:
         namespace: default
         manifests: |
-          $GITHUB_WORKSPACE/order-service/order-service.yaml
+          order-service/order-service.yaml
         images: |
           daprtalks.azurecr.io/order-service:${{ github.sha }}
         imagepullsecrets: |
