--- a/components/statestore.yaml
+++ b/components/statestore.yaml
@@ -1,16 +1,16 @@
-# apiVersion: dapr.io/v1alpha1
-# kind: Component
-# metadata:
-#   name: statestore
-# spec:
-#   type: state.redis
-#   metadata:
-#   - name: redisHost
-#     value: localhost:6379
-#   - name: redisPassword
-#     value: ""
-#   - name: actorStateStore
-#     value: "true"
+apiVersion: dapr.io/v1alpha1
+kind: Component
+metadata:
+  name: statestore
+spec:
+  type: state.redis
+  metadata:
+  - name: redisHost
+    value: localhost:6379
+  - name: redisPassword
+    value: ""
+  - name: actorStateStore
+    value: "true"
 
 
 # apiVersion: dapr.io/v1alpha1
@@ -31,20 +31,20 @@
 # auth:
 #   secretStore: kubernetes
 
-apiVersion: dapr.io/v1alpha1
-kind: Component
-metadata:
-  name: statestore
-spec:
-  type: state.azure.cosmosdb
-  metadata:
-  - name: url
-    value: https://dapr-talk.documents.azure.com:443/
-  - name: masterKey
-    secretKeyRef:
-      name: azure-cosmos
-      key: access-key
-  - name: database
-    value: daprtalk
-  - name: collection
-    value: orders
+# apiVersion: dapr.io/v1alpha1
+# kind: Component
+# metadata:
+#   name: statestore
+# spec:
+#   type: state.azure.cosmosdb
+#   metadata:
+#   - name: url
+#     value: https://dapr-talk.documents.azure.com:443/
+#   - name: masterKey
+#     secretKeyRef:
+#       name: azure-cosmos
+#       key: access-key
+#   - name: database
+#     value: daprtalk
+#   - name: collection
+#     value: orders
