--- a/components/statestore.yaml
+++ b/components/statestore.yaml
@@ -1,18 +1,3 @@
-apiVersion: dapr.io/v1alpha1
-kind: Component
-metadata:
-  name: statestore
-spec:
-  type: state.redis
-  metadata:
-  - name: redisHost
-    value: localhost:6379
-  - name: redisPassword
-    value: ""
-  - name: actorStateStore
-    value: "true"
-
-
 # apiVersion: dapr.io/v1alpha1
 # kind: Component
 # metadata:
@@ -20,16 +5,30 @@ spec:
 # spec:
 #   type: state.redis
 #   metadata:
+#   - name: redisHost
+#     value: localhost:6379
+#   - name: redisPassword
+#     value: ""
 #   - name: actorStateStore
 #     value: "true"
-#   - name: redisHost
-#     value: redis-master:6379
-#   - name: redisPassword
-#     secretKeyRef:
-#       name: redis
-#       key:  redis-password
-# auth:
-#   secretStore: kubernetes
+
+apiVersion: dapr.io/v1alpha1
+kind: Component
+metadata:
+  name: statestore
+spec:
+  type: state.redis
+  metadata:
+  - name: actorStateStore
+    value: "true"
+  - name: redisHost
+    value: redis-master:6379
+  - name: redisPassword
+    secretKeyRef:
+      name: redis
+      key:  redis-password
+auth:
+  secretStore: kubernetes
 
 # apiVersion: dapr.io/v1alpha1
 # kind: Component
