--- a/.github/workflows/delivery-service.yml
+++ b/.github/workflows/delivery-service.yml
@@ -1,6 +1,11 @@
 name: Build & Deploy Delivery Service
 
 on:
+  workflow_dispatch:
+    inputs:
+      git-ref:
+        description: Git Ref (Optional)    
+        required: false  
   push:
     branches:
       - master
